<resources>
    <string name="app_name">PopularMovies2</string>
    <string name="action_settings">Settings</string>
    <string name="release_date">Release Date</string>
    <string name="popularity_label">Popularity</string>
    <string name="vote_label">Votes</string>
    <string name="overview_label">Overview</string>
    <string name="high_rate">High rate</string>
    <string name="title_activity_details_movie">DetailsMovieActivity</string>
    <string name="action_share">Share</string>
    <string name="trailer_label">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="favorites">Favorites</string>

</resources>
