<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_details_movie" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/margin_left"
            android:paddingBottom="@dimen/margin_left"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                app:cardCornerRadius="4dp"
                app:cardElevation="@dimen/cardview_default_elevation"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_anchorGravity="bottom|left"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:scaleType="centerCrop"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/margin_vertical_borders"
                        android:layout_marginBottom="@dimen/margin_vertical_borders">
                        <TextView
                            android:id="@+id/votes_label"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/vote_label"
                            />
                        <TextView
                            android:id="@+id/votes_data"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right" />

                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/margin_left"
                android:paddingBottom="@dimen/margin_left"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_label"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    android:textColor="@android:color/white"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_vertical_borders"
                    android:layout_marginBottom="@dimen/margin_vertical_borders">

                    <TextView
                        android:id="@+id/release_date_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/release_date"
                        android:textSize="15sp"
                        android:textColor="@android:color/white"
                        />

                    <TextView
                        android:id="@+id/release_date_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="15sp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/margin_vertical_borders"
                    android:layout_marginBottom="@dimen/margin_vertical_borders">
                    <TextView
                        android:id="@+id/popularity_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/popularity_label"
                        android:textSize="15sp"
                        android:textColor="@android:color/white"
                        />

                    <TextView
                        android:id="@+id/popularity_data"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="15sp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_left"
            android:paddingBottom="@dimen/margin_left"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/overview_label"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/overview_label"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

            <TextView
                android:id="@+id/overview_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trailers_layout"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_left"
            android:paddingBottom="@dimen/margin_left"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/trailer_label"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reviews_layout"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/margin_left"
            android:paddingBottom="@dimen/margin_left"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/reviews"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

    </LinearLayout>






</android.support.v4.widget.NestedScrollView>
